# chia-plot-manager

./: Makefile  README.md  config.yaml.default  makeconfig.ps1  requirements.txt  setup.cfg  setup.py  stateless-manager.py
plotmanager/: __main__.py
