[metadata]
name = chia-plot-manager
version = 1.0.1
url = https://gitlab.com/kimvais/chia-plot-manager
license = GPLv3
author = Kimmo Parviainen-Jalanko
author_email = kimvais@kimva.is
description = Chia plot manager

[options]
packages =
    plotmanager
    plotmanager.library
    plotmanager.library.parse
    plotmanager.library.commands
    plotmanager.library.utilities
install_requires =
    dateparser==1.0.0
    discord_notify==1.0.0
    playsound==1.2.2
    psutil==5.8.0
    python_pushover==0.4
    PyYAML==5.4.1

[options.entry_points]
console_scripts =
    chia-plot-manager = plotmanager.__main__:main
